--- a/index.css
+++ b/index.css
@@ -5,7 +5,7 @@ body{
     height: 100%;
 background-image: url("background.jpg");
 position: relative;
-background-repeat: no-repeat;
+background-repeat: repeat-y;
 background-size: 100%; 
 }
 .signin{
